# tick-tick-mcp

./: .gitignore  README.md  config.py  pyproject.toml  server.py  session.py
handlers/: projects.py  tags.py  tasks.py
skills/ticktick-skill/: AGENTS.md  SKILL.md
skills/ticktick-skill/ai/: design-doc.md
skills/ticktick-skill/references/: contracts.md
skills/ticktick-skill/scripts/: ticktick-plan  ticktick-projects  ticktick-task-update  ticktick-tasks-completed  ticktick-tasks-open  ticktick-tasks-undated
skills/ticktick-skill/scripts/ticktick_cli/: mcp.py  output.py  plan.py  projects.py  task_update.py  tasks_completed.py  tasks_open.py  tasks_undated.py
tests/: conftest.py  test_api.py  test_config.py  test_projects.py  test_session.py  test_skill_packaging.py  test_skill_plan.py  test_skill_task_update.py  test_skill_tasks_open.py  test_skill_tasks_undated.py  test_tags.py  test_tasks.py
ticktick_mcp/: __init__.py  api.py  client.py  skill_cli.py  tasks_completed.py
ticktick_mcp/cli/: __init__.py  api.py  task_update.py  tasks_completed.py
tools/: tasks.py
