[project]
name = "ticktick-mcp"
version = "0.1.0"
description = "MCP server for TickTick — full CRUD for tasks, projects, tags"
requires-python = ">=3.9"
dependencies = [
    "requests",
]

[project.scripts]
ticktick-mcp = "server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"